# LifeLens

./: .gitignore  README.md
dashboard/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  test-connection.html
dashboard/src/: App.tsx  vite-env.d.ts
dashboard/src/lib/: api.test.ts  api.ts
dashboard/src/pages/: Dashboard.tsx  Health.tsx  Location.tsx  Productivity.tsx
desktop/: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
desktop/dist-electron/main/: index.js
desktop/dist-electron/preload/: index.mjs
desktop/dist-electron/renderer/: index.html
desktop/src/main/: index.ts  input-monitor.ts  (+3 more)
docs/: CROSS_DEVICE_SETUP.md
docs/plans/: 2026-03-14-life-tracking-app.md
ios/: README.md
ios/LifeLens/: Info.plist  LifeLensApp.swift
scripts/: ExportOptions.plist  README.md  com.lifelens.ios-rebuild.plist  enable-accessibility.sh  ios-rebuild.sh  verify-server-setup.sh
server/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_hypertables.py  002_continuous_aggregates.py
server/app/: main.py
server/app/api/: health.py  ingest.py  query.py
server/app/core/: config.py  security.py
server/app/db/: connection.py
server/app/models/: __init__.py  health.py  location.py  productivity.py
server/app/services/: inference.py  query.py
server/tests/: test_api.py  test_query.py
tests/integration/: test_e2e.py
tests/manual/: test_checklist.md
(+12 files in other folders)
